--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-  "dependencies": {
-    "vite": "^3.2.4"
-  },
+  "name": "projeto-individual",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1" 
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "json-server": "^0.17.1"
   }
 }
