--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
-  "name": "projeto-individual",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "name": "project_3",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "json-server": "^0.17.1",
-    "server": "^1.0.37"
+    "axios": "^1.2.0",
+    "bootstrap-icons": "^1.10.2",
+    "framer-motion": "^7.6.15",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "@vitejs/plugin-react": "^2.2.0",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "laravel-vite-plugin": "^0.7.1",
+    "vite": "^3.2.4"
   }
 }
